# proxmox_monitor

./: App.tsx  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  app js.txt  app.js  app.json  cli.dockerfile  contributing.md  metro.config.js  package-lock.json  package.json
.github/workflows/: ci.yml  cli.yml  docker-cli.yml  release.yml
alerts/: README.md  proxmox.rules.yml
charts/proxmox-exporter/: Chart.yaml  values.yaml
charts/proxmox-exporter/templates/: deployment.yaml  secret.yaml  service.yaml  servicemonitor.yaml
docs/: docusaurus.config.js  index.md  sidebars.js
docs/alerts/: rules.md
docs/cli/: installation.md
docs/exporter/: metrics.md
docs/integrations/: grafana.md
exporter/: Cargo.toml  env.example  exporter.dockerfile
exporter/src/: main.rs
github/workflows/: docker.yml
grafana/: README.md  proxmox-dashboard.json
scripts/: build-release-linux.sh  build-release.sh
src/: cli.rs  client.rs  lib.rs  main.rs  models.rs  monitor.rs
tests/: integration_test.rs
