[package]
name = "proxmox-monitor"
version = "0.1.0"
edition = "2021"
description = "CLI и библиотека для мониторинга Proxmox VE на Rust"
license = "MIT"
repository = "https://github.com/Trytonottry/proxmox_monitor"
homepage = "https://github.com/Trytonottry/proxmox_monitor"
readme = "README.md"
keywords = ["proxmox", "monitoring", "cli", "devops", "sysadmin", "rust"]
categories = ["command-line-utilities", "api-bindings", "web-programming::http-client"]
authors = ["Trytonottry <try2nottry@gmail.com>"]
documentation = "https://docs.rs/proxmox-monitor"

[[bin]]
name = "proxmox-monitor"
path = "src/main.rs"

[lib]
name = "proxmox_monitor"
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls"], default-features = false }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
dotenvy = "0.15"
anyhow = "1.0"
once_cell = "1.18"

[dev-dependencies]
tokio-test = "0.4"

[[test]]
name = "integration"
path = "tests/integration_test.rs"