[package]
name = "proxmox-exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "1.0", features = ["server"] }
hyper-util = { version = "0.1", features = ["server"] }
prometheus = "0.13"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = "0.1"
anyhow = "1.0"
once_cell = "1.18"